Feat: userSession에 login_type 추가
